--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,39 @@
 @import "tailwindcss";
+@import "tw-animate-css";
+@import '../styles/fonts.css';
+
+@custom-variant dark (&:is(.dark *));
+
+@theme {
+  --font-VazirMatn-Regular: 'Vazirmatn Regular';
+  --font-VazirMatn-Medium: 'Vazirmatn Medium';
+  --font-VazirMatn-Light: 'Vazirmatn Light';
+  --font-VazirMatn-Bold: 'Vazirmatn Bold';
+  --font-VazirMatn-SemiBold: 'Vazirmatn SemiBold';
+}
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: hsl(0 0% 100%);
+  --foreground: hsl(222 47% 11%);
+  --primary: hsl(217 91% 60%);
+  --secondary: hsl(210 40% 96%);
+  --muted: hsl(210 40% 96%);
+  --accent: hsl(217 91% 65%);
+  --destructive: hsl(0 84% 60%);
+  --border: hsl(214 32% 91%);
+  --input: hsl(214 32% 91%);
+  --ring: hsl(217 91% 60%);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.dark {
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  body {
+    @apply bg-background text-foreground;
+  }
 }
