--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,16 @@
   --font-VazirMatn-Light: 'Vazirmatn Light';
   --font-VazirMatn-Bold: 'Vazirmatn Bold';
   --font-VazirMatn-SemiBold: 'Vazirmatn SemiBold';
+  --font-Logo-Regular: 'Logo Regular';
+  --font-Logo-Extrude: 'Logo Extrude';
+  --font-Dana-Bold: 'Dana Bold';
+
+  --breakpoint-*: initial;
+  --breakpoint-xs: 30rem;
+  --breakpoint-sm: 40rem;
+  --breakpoint-md: 48rem;
+  --breakpoint-lg: 64rem;
+  --breakpoint-xl: 80rem;
 }
 
 :root {
@@ -25,15 +35,24 @@
   --ring: hsl(217 91% 60%);
 }
 
-.dark {
-
+@theme inline {
+  --color-primary: var(--primary);
+  --color-secondary: var(--secondary);
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-muted: var(--muted);
+  --color-accent: var(--accent);
+  --color-destructive: var(--destructive);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
 }
 
+
+.dark {}
+
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
-  body {
-    @apply bg-background text-foreground;
+  .primary-link {
+    @apply transition-colors duration-300 hover:text-primary
   }
 }
